# astro-lockdrop-nft

./: .gitignore  README.md
contract/: Cargo.toml  rustfmt.toml
contract/src/: contract.rs  contract_tests.rs  lib.rs  msg.rs  state.rs
data/: instantiate_msg.sample.json  level_1_owners.sample.txt
scripts/: .env  deploy.ts  helpers.ts  mint.ts  package-lock.json
